2005-07-20  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/TODO:
	* gst-libs/gst/audio/gstaudioclock.c: (gst_audio_clock_init),
	(gst_audio_clock_get_internal_time):
	* gst-libs/gst/audio/gstaudioclock.h:
	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_init), (gst_base_audio_sink_dispose),
	(gst_base_audio_sink_get_time), (gst_base_audio_sink_event),
	(gst_base_audio_sink_render),
	(gst_base_audio_sink_create_ringbuffer),
	(gst_base_audio_sink_change_state):
	Make sure the audio clock always returns an increasing value.

2005-07-19  Andy Wingo  <wingo@pobox.com>

	* gst/videotestsrc/: Cleanups.

2005-07-19  Wim Taymans  <wim@fluendo.com>

	* ext/gnomevfs/gstgnomevfssrc.c: (gst_gnomevfssrc_create):
	Better debugging.

2005-07-19  Wim Taymans  <wim@fluendo.com>

	* examples/seeking/seek.c: (make_dv_pipeline),
	(make_vorbis_theora_pipeline), (query_rates),
	(query_positions_elems), (query_positions_pads), (do_seek):
	Make correct DV pipeline.

2005-07-18  Andy Wingo  <wingo@pobox.com>

	* configure.ac (DEFAULT_AUDIOSINK, DEFAULT_AUDIOSRC): Use alsa by
	default. Also because it's the only thing that really works. (This
	is used in the GConf elements).
	Use AS_LIBTOOL_TAGS.

2005-07-18  Wim Taymans  <wim@fluendo.com>

	* gst/playback/gstdecodebin.c: (remove_element_chain):
	* gst/playback/gstplaybin.c: (add_sink):
	* gst/playback/gststreaminfo.c: (gst_stream_info_dispose),
	(gst_stream_info_set_mute):
	* gst/playback/gststreamselector.c:
	(gst_stream_selector_get_linked_pad),
	(gst_stream_selector_getcaps), (gst_stream_selector_chain):
	More leak and compile fixes.

2005-07-18  Wim Taymans  <wim@fluendo.com>

	* examples/seeking/seek.c: (make_vorbis_theora_pipeline),
	(query_rates), (query_positions_elems), (query_positions_pads),
	(do_seek), (seek_cb), (stop_seek):
	Updated seek example. 

	* gst/playback/gstdecodebin.c: (remove_element_chain), (unlinked):
	* gst/playback/gstplaybasebin.c: (queue_threshold_reached),