@@ -1,13 +1,6 @@
-if USE_GCONF
-GCONF_DIR = gconf
-else
-GCONF_DIR =
-endif
-
 SUBDIRS = \
 	audio \
 	floatcast \
-	$(GCONF_DIR) \
 	interfaces \
 	net \
 	riff \
@@ -18,7 +11,6 @@ SUBDIRS = \
 DIST_SUBDIRS = \
 	audio \
 	floatcast \
-	gconf \
 	interfaces \
 	net \
 	riff \
