@@ -1,3 +1,0 @@
-test-gconf
-gstreamer-gconf-uninstalled.pc
-gstreamer-gconf.pc
