@@ -1,13 +1,0 @@
-# the standard variables don't make sense for an uninstalled copy
-prefix=
-exec_prefix=
-libdir=${pcfiledir}/../gst-libs/gst/gconf
-includedir=${pcfiledir}/../gst-libs
-
-Name: GStreamer GConf Library, uninstalled
-Description: Streaming-media framework, GConf support library, not installed
-Requires: gstreamer-@GST_MAJORMINOR@ gconf-2.0
-Version: @VERSION@
-
-Libs: ${libdir}/libgstgconf-@GST_MAJORMINOR@.la
-Cflags: -I${includedir}
