@@ -1,12 +1,0 @@
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-libdir=@libdir@
-includedir=@includedir@/gstreamer-@GST_MAJORMINOR@
-
-Name: GStreamer GConf Library
-Description: Streaming-media framework, GConf support library
-Requires: gstreamer-@GST_MAJORMINOR@ gconf-2.0
-Version: @VERSION@
-
-Libs: -L${libdir} -lgstgconf-@GST_MAJORMINOR@
-Cflags: -I${includedir}
